@@ -153,6 +153,7 @@ void mac_prefix_init() {
   fp = fopen(filename, "r");
   if (!fp) {
     error("Unable to open %s.  Ethernet vendor correlation will not be performed ", filename);
+    return;
   }
 
   while(fgets(line, sizeof(line), fp)) {
